# kzte-reference-oracle

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml
config/: cli.example.toml  cli.toml  feeder.example.toml  feeder.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: business_day.rs  config.rs  lib.rs  math.rs  types.rs
crates/feeder/: Cargo.toml
crates/feeder/src/: aggregator.rs  config.rs  lib.rs  main.rs  metrics.rs  service.rs  submitter.rs
crates/feeder/src/adapters/: mod.rs  nbk_official_page.rs  nbk_open_data.rs  optional_market_twap.rs
docs/: github-ci-tests-prompt.md  price-conversions.md  ui-design-prompt.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/oracle/latest/: route.ts
frontend/src/app/api/oracle/stream/: route.ts
frontend/src/app/developers/: page.tsx
frontend/src/app/how-it-works/: page.tsx
frontend/src/app/price-feeds/: page.tsx
frontend/src/components/layout/: site-footer.tsx  site-header.tsx  site-shell.tsx
frontend/src/components/live/: live-home-spotlight.tsx  live-price-feeds-shell.tsx  use-live-oracle-feeds.ts
frontend/src/components/ui/: button.tsx  feature-card.tsx  icon.tsx  section-heading.tsx  sparkline.tsx
frontend/src/lib/data/: site.ts
frontend/src/lib/oracle/: live-feeds-server.ts  live-feeds.ts
frontend/src/lib/types/: site.ts
programs/kzte_oracle/: Cargo.toml
programs/kzte_oracle/src/: constants.rs  error.rs  lib.rs  state.rs
scripts/: anchor-test.ps1  run-feeder-once.ps1
tests/: Cargo.toml  ezhednevnye-oficialnye-rynochnye-kursy-valyut.html
tests/fixtures/: nbk_official_page_2026_04_05.html
tests/src/: integration.rs
