[package]
name = "kzte-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kzte-cli"
path = "src/main.rs"

[dependencies]
anchor-client.workspace = true
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
kzte-common = { path = "../common" }
kzte-feeder = { path = "../feeder" }
kzte_oracle = { path = "../../programs/kzte_oracle", features = ["no-entrypoint"] }
serde_json.workspace = true
solana-commitment-config.workspace = true
solana-sdk.workspace = true
solana-system-interface.workspace = true
tokio.workspace = true
