[package]
name = "kzte-feeder"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kzte_feeder"
path = "src/lib.rs"

[[bin]]
name = "kzte-feeder"
path = "src/main.rs"

[features]
default = []
market-twap = []

[dependencies]
anchor-lang.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
kzte-common = { path = "../common" }
kzte_oracle = { path = "../../programs/kzte_oracle", features = ["no-entrypoint"] }
regex.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
